# Neural-Discontinuous-Galerkin

./: README.md  hw2.ipynb
Neural DG/code_Alexi/: Neural_fluxes.py  Solver_Params.py  eval_and_plot_funcs_martin.py  generate_data_martin.py  params.py  solvers_martin.py  test2_martin.py  test3_martin.py  test_DG.py  test_martin.py
Neural DG/code_Alexi/checkpoints/: Gudenov_basis2_best.pt  Gudenov_basis2_last.pt  Gudenov_basis3_best.pt  Gudenov_basis3_last.pt  best_model.pt  model_data.pt  pretrain.pt
Neural DG/code_Alexi/data/: piecewise_constant_dataset.pt  riemann_dataset.pt
Neural DG/code_Alexi/nn_arz/: pyproject.toml  triangle_2D2.ipynb
Neural DG/code_Alexi/nn_arz/nn_arz/: datasets.py  explicit.py  lax_hopf.py  models.py  numerical_schemes.py  polynomials.py  utils.py
Neural DG/code_Alexi/nn_arz/nn_arz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Neural DG/code_Alexi/nn_arz/nn_arz/lwr/: explicit.py  fluxes.py  lax_hopf.py
runs/experiment_1/: events.out.tfevents.1745268906.bentley.polytechnique.fr.86827.0
