# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn_arz"
version = "0.1.0"
description = "TODO"
authors = [{ name = "Alexi Canesse" }]
dependencies = [
    "numpy==1.26.4",
    "matplotlib==3.9.2",
    "scipy==1.14.1",
    "tqdm==4.66.5",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "tensorboard==2.18.0"
]
